<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>taf-upload</groupId>
    <artifactId>taf-upload</artifactId>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>uk.gov.companieshouse.taf</groupId>
        <artifactId>taf-parent</artifactId>
        <version>2.0-SNAPSHOT</version>
    </parent>

    <properties>
        <cinnamon.version>0.2.0</cinnamon.version>
        <cucumber.options>--tags @complete</cucumber.options>
        <failsafe.fork.count>1</failsafe.fork.count>
        <java.version>1.8</java.version>
        <env>default</env>
        <classes>**/*AllTests.java</classes>
        <maven.build.timestamp.format>yyyy-MM-dd-HHmm</maven.build.timestamp.format>
        <repo.basedir>${project.basedir}/repo</repo.basedir>
        <skipITs>false</skipITs>
        <webDriverConfig>${project.basedir}/conf/webdriver.conf</webDriverConfig>
        <browserProfile>chrome</browserProfile>
    </properties>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <violationSeverity>warning</violationSeverity>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <excludes>**/*IT.java</excludes>
                    <failOnViolation>true</failOnViolation>
                    <configLocation>companieshouse_checks.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>uk.gov.companieshouse</groupId>
                        <artifactId>java-checkstyle-config</artifactId>
                        <version>1.0-SNAPSHOT</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- disables unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- integration tests i.e. cucumber tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <forkCount>${failsafe.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <includes>
                        <include>${classes}</include>
                    </includes>
                    <runOrder>alphabetical</runOrder>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx512m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <systemPropertyVariables>
                        <env>${env}</env>
                        <project.dir>${basedir}</project.dir>
                        <cucumber.options>${cucumber.options}</cucumber.options>
                        <browserProfile>${browserProfile}</browserProfile>
                        <webDriverConfig>${webDriverConfig}</webDriverConfig>
                        <http.proxyHost>${http.proxyHost}</http.proxyHost>
                        <https.proxyHost>${https.proxyHost}</https.proxyHost>
                        <http.proxyPort>${http.proxyPort}</http.proxyPort>
                        <https.proxyPort>${https.proxyPort}</https.proxyPort>
                        <http.nonProxyHosts>${http.nonProxyHosts}</http.nonProxyHosts>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <id>failsafe-integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- HTML reports -->
            <plugin>
                <groupId>report.donut</groupId>
                <artifactId>donut-maven-plugin</artifactId>
                <version>1.2.2</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <resultSources>
                                <resultSource>
                                    <!-- optional format, defaults to cucumber -->
                                    <format>cucumber</format>
                                    <directory>${project.build.directory}/cucumber-reports</directory>
                                </resultSource>
                            </resultSources>
                            <outputPath>${project.build.directory}/donut/</outputPath>
                            <timestamp>${maven.build.timestamp}</timestamp>
                            <template>default</template>
                            <prefix>chips</prefix>
                            <!--<prefix>${project.name}</prefix>-->
                            <projectName>${project.name}</projectName>
                            <projectVersion>${project.version}</projectVersion>
                            <countSkippedAsFailure>true</countSkippedAsFailure>
                            <skip>${skipITs}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Cucumber parallel plugin -->
            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>5.0.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <!-- Mandatory -->
                            <glue>
                                <package>io.magentys.cinnamon</package>
                                <package>uk.gov.companieshouse.taf</package>
                            </glue>
                            <!-- These are the default values -->
                            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
                            <featuresDirectory>src/test/resources/features/</featuresDirectory>
                            <cucumberOutputDir>target/cucumber-reports</cucumberOutputDir>
                            <format>json</format>
                            <namingScheme>pattern</namingScheme>
                            <namingPattern>{f}IT</namingPattern>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.11.0</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>7.5.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>

        <!-- Main source dependencies -->
        <dependency>
            <groupId>uk.gov.ch.taf</groupId>
            <artifactId>common</artifactId>
            <version>6.17.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>io.magentys.memory</groupId>
            <artifactId>memory-lib</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>io.magentys</groupId>
            <artifactId>cinnamon-webdriver</artifactId>
            <version>${cinnamon.version}</version>
        </dependency>

        <dependency>
            <groupId>io.magentys</groupId>
            <artifactId>cinnamon-rest</artifactId>
            <version>${cinnamon.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>3.141.59</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-htmlunit-driver</artifactId>
            <version>2.52.0</version>
        </dependency>

        <dependency>
            <groupId>io.magentys</groupId>
            <artifactId>magentys-commons</artifactId>
            <version>0.0.1</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>

        <dependency>
            <groupId>io.magentys</groupId>
            <artifactId>cinnamon-cucumber</artifactId>
            <version>${cinnamon.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>ch-jenkins-2k8</id>
            <url>http://ch-jenkins-2k8:8081/artifactory/libs-snapshot-local</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>ch-jenkins-2k8-release</id>
            <url>http://ch-jenkins-2k8:8081/artifactory/libs-release-local</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>oss.snap</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ch-jenkins-2k8</id>
            <name>ch-jenkins-2k8-snapshots</name>
            <url>http://ch-jenkins-2k8:8081/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
</project>